making navbar, spacing issues

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,12 +19,10 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: "Source Sans Pro", sans-serif;
+  margin: auto;
+  padding-top: 90px
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-
- .nav {
-   font-family: "Bungee", sans-serif;
- }
